--- a/content/2.part.tex
+++ b/content/2.part.tex
@@ -1,15 +1,15 @@
-\section{Perspectives and Challenges Faced by Individuals with Autism Spectrum Disorder (ASD) in public Transportation}
+\section{Perspectives and Challenges Faced by Autistic Individuals in public Transportation}
     
 \subsection{Encountered Challenges}
 
-    Anxiety and stress are common challenges that people with ASD face while taking transport on a regular basis \cite{haas_experiences_nodate}. Stress stems from the worry that they could commit mistakes when travelling, such as skipping important stops or not knowing if their regular transit plans will change. Their daily tasks become more challenging as a consequence of their elevated emotional state. 
-    Moreover, ASD may causes balance and motion sickness, sensitivity to noise in the surrounding environment, tactile perception, lighting or smells. They appear as an additional barrier when using public transportation and make public transportation frightening.
+    Anxiety and stress are common challenges that autistic individuals face while using transportation on a regular basis \cite{haas_experiences_nodate}. Stress stems from the worry that they could commit mistakes when travelling, such as skipping important stops or not knowing if their regular transit plans will change. Their daily tasks become more challenging as a consequence of their elevated emotional state. 
+    Moreover, Autism Spectrum Disorder (ASD) may cause balance and motion sickness, sensitivity to noise in the surrounding environment, to tactile perception, lighting or smells. These appear as an additional barrier when using public transportation and make it frightening.
 \newline
 \newline
-    Many people with ASD feel forced to rely on parents and caregivers. However, another significant concern comes from this heavy dependency on family for transportation. This dynamic induces inconvenience and stress for both adults with ASD and their immediate support circle \cite{deka_co-principal_nodate}. This reliance affects their autonomy but also has broader consequences on the convenience and flexibility of their everyday live. 
+    Many people with ASD feel forced to rely on parents and caregivers. However, another significant concern comes from this heavy dependency on family for transportation. This dynamic induces inconveniences and stress for both adults with ASD and their immediate support circle \cite{deka_co-principal_nodate}. This reliance affects their autonomy but also has a broader impact on the convenience and flexibility of their everyday live. 
     The phase of transition following school completion, usually around age 21, presents an additional set of difficulties. As school transportation and government support end,  people with ASD and their families enter a world of newly discovered transportation complexity.
     Many individuals with ASD have limited walking skills, which makes it harder for them to get around freely in public places and increases their dependency on others for transportation.
-    The safety concerns associated with driving is alarming, particularly from the perspective of concerned parents, despite an expressed interest in obtaining a driver's license for the sake of independence. 
+    The safety concerns associated with driving is alarming, particularly from the perspective of concerned parents, despite an expressed interest on the part of autistic individuals in obtaining a driver's license for the sake of independence. 
 \newline
 \newline
     Furthermore, specific worries about crowding and safety are real roadblocks for people with ASD to use public transportation \cite{falkmer_viewpoints_2015}.
@@ -20,7 +20,7 @@
    To mitigate those difficulties, people with ASD use a variety of adaptive techniques when navigating public transportation. 
    \newline
    \newline
-   One of the most widely spread strategies is avoiding public transportation completely and using their support networks, which include family and caregivers\cite{deka_co-principal_nodate}. This approach helps reducing stress and anxiety normally associated with travel. However, as explained above, it makes them strongly dependent on others to travel, narrowing their independence. 
+   One of the most widely spread strategies is avoiding public transportation completely and using their support networks, which include family and caregivers\cite{deka_co-principal_nodate}. This approach helps reducing stress and anxiety normally associated with travel. However, as explained above, it makes them strongly dependent on others to travel. 
    \newline
    \newline
     Another important strategy is to carefully plan their route in advance \cite{haas_experiences_nodate}. This helps people with ASD to know where to go and anticipate changes, which gives them a sense of control. Other tactics used to reduce stress when using public transportation include avoiding crowded areas or selecting off-peak hours.
@@ -29,19 +29,19 @@
    Rather than using public transport, some individuals find comfort in utilizing bicycles for short-distance travel \cite{falkmer_viewpoints_2015} for more autonomy. They usually lean towards self-reliance and express a preference for drawing on personal coping mechanisms rather than seeking external help. Another effective coping mechanism consists in setting up routines\cite{falkmer_viewpoints_2015}, which reduces anxiety by introducing familiarity into their travel experiences. 
    \newline
    \newline
-   The use of technological tools, such as smartphone applications, plays a crucial role in helping individuals with ASD. It helps them to plan paths and to check transportation schedules. It also enhances their independence during travel. To manage sensory challenges, music and headphones provides them a controlled auditory environment and relief from noise sensitivity \cite{haas_experiences_nodate}. 
+   The use of technological tools, such as smartphone applications, plays a crucial role in helping individuals with ASD. It makes it easier to plan paths and to check transportation schedules. It also enhances their autonomy during travel. To manage sensory challenges, music and headphones provide them with controlled auditory environment and relief from noise sensitivity \cite{haas_experiences_nodate}. 
 
 
-\subsection{Expectations and Envisaged Solutions}
+\subsection{Expectations and Foreseen Solutions}
 
-    Individuals with ASD are exposed to a lot of anxiety during transportation. In order to reduce the anxiety felt in transit, sensory-friendly measures specially tailored for them would be implemented \cite{haas_experiences_nodate}. These measures should include the selection of less noisy paths for transport or the installation of dedicated areas for people with sensory sensitivities. Straightforward communication from transport companies would also reduce stress caused by uncertainty and randomness.
+    Individuals with ASD are subjected to high levels of anxiety whilst using transportation. In order to reduce the anxiety felt in transit, sensory-friendly measures specially tailored for them would be implemented \cite{haas_experiences_nodate}. These measures should include the selection of less noisy paths for transport or the installation of dedicated areas in waiting areas for people with sensory sensitivities. Straightforward communication from transport companies would also reduce stress caused by uncertainty and randomness.
     \newline
     \newline
-    People with ASD would feel better if universal design principles were implemented in transport infrastructures \cite{haas_experiences_nodate}. It would facilitate access for everyone, disabled and non-disabled people included, and improve public transportation for all users.
+    People with ASD would feel better if universal design principles were implemented in transport infrastructures \cite{haas_experiences_nodate}. It would facilitate access for everyone, disabled and non-disabled people alike, and improve public transportation for all users.
     \newline
     \newline
-    To help them gain independence in their daily journeys, people with ASD expect new technologies to simplify their everyday life, for example with dedicated applications that consider their personal constraints. They would also be thankful for training programs to help them navigate public spaces autonomously. Those programs would start during the school curriculum, and smoothen the transition between school and adult life \cite{deka_co-principal_nodate}. Moreover, driver education programs should adapt to people with ASD to address their existing interest in driving \cite{deka_co-principal_nodate}. 
+    To help them gain independence in their daily transits, people with ASD expect new technologies to simplify their everyday life, for example with dedicated applications that consider their personal needs. They would also benefit from training programs to help them navigate public spaces autonomously. Those programs would start during the school curriculum, and smoothen the transition between school and adult life \cite{deka_co-principal_nodate}. Moreover, driver education programs should adapt to people with ASD and allow them to pursue their existing interest in driving \cite{deka_co-principal_nodate}. 
     \newline
     \newline
-    Their requests finally address the global awareness about ASD by setting up public education campaigns to enhance awareness about the characteristics of ASD. Those awareness campaigns would aim to facilitate social integration for adults with ASD \cite{deka_co-principal_nodate}. They also want targeted training modules for transportation staff, like vehicle operators or front-line staff, to address issues specific to ASD more easily and increase comprehension and assistance with people with ASD \cite{haas_experiences_nodate}. 
+    Their requests finally regard the global awareness about ASD by setting up public education campaigns to enhance awareness about the characteristics of ASD. Those awareness campaigns would aim to facilitate social integration for adults with ASD \cite{deka_co-principal_nodate}. They also want targeted training modules for transportation staff, like vehicle operators or front-line staff, to address issues specific to ASD more easily and increase understanding and assistance to people with ASD \cite{haas_experiences_nodate}. 
 \newline
