--- a/content/4.part4.tex
+++ b/content/4.part4.tex
@@ -1,17 +1,17 @@
 \section{The limits of the solutions}
 As we mentioned previously, numerous solutions exist in order to simplify urban transportation for people with ASD. However, nowadays, we do not have a perfect solution. Even though the existing solutions can help people with ASD, they all have numerous flaws. First of all, the resources are limited and not adapted to every person with ASD. Then, some of the considered solutions cannot be done because it would not be compatible with the already existing infrastructures. Moreover, more of the solutions are not ideal because it just forces people with ASD to adapt to the other people, instead of considering their real needs. Finally, instead of finding solutions in order to help them to adapt to the other people, we should work on diagnosing autism better and earlier.
 \subsection{The existing solutions are limited}
-As we saw before, there exist some solutions in order to help people with ASD. However, these solutions are very far from being enough. In fact, as we can see in the articles (2) and (10), a lot of autistic people can have trouble driving and most of them prefer to use the public transportation. But the public transportation has also a lot to improve. Indeed, a study has been made in Sydney (article 9) over 14 young adults who have ASD, and shows that most of them feel anxious due to the stress of doing bad things, like miss their stop. Also, the noise, smell, light and motion sickness can be a trouble for them. But most of them still have confidence in their ability to use public transportation.
+As we saw before, there exist some solutions in order to help people with ASD. However, these solutions are very far from being enough. In fact, as we can see in the articles \cite{2015ViewpointsAdultsAutism} and \cite{2021DevelopingCommunityMobility}, a lot of autistic people can have trouble driving and most of them prefer to use the public transportation. But the public transportation has also a lot to improve. Indeed, a study has been made in Sydney \cite{2020ExperiencesYoungAutistic} over 14 young adults who have ASD, and shows that most of them feel anxious due to the stress of doing bad things, like miss their stop. Also, the noise, smell, light and motion sickness can be a trouble for them. But most of them still have confidence in their ability to use public transportation.
 
-Another problem that is highlighted in the article (detour to the right place : METTRE UN NUMERO) is the lack of accessibility of public transportation. As mentioned in this article, public transportation is crucial for the mobility of people with ASD but it exists numerous inequalities regarding its accessibility. For instance, suburbans and rural areas does not have as many public transportation as the center of a big city.
+Another problem that is highlighted in the article \cite{2015DetourRightPlace} is the lack of accessibility of public transportation. As mentioned in this article, public transportation is crucial for the mobility of people with ASD but it exists numerous inequalities regarding its accessibility. For instance, suburbans and rural areas does not have as many public transportation as the center of a big city.
 
-Moreover, the existing mobile apps to help people with ASD are not perfect and can be improved. For instance, as we can see in the article (13), we can see that an app has been developped for the city of Viana do Castelo, in Portugal, in order to provide to people an optimal route regarding their disabilities. This app uses the A-star algorithm to find five optimum paths between two destinations, and users can choose the best path for them depending on their disabilities. However, this app is available only in the city of Viana de Castelo, so people living in other cities cannot benefit of it. Also, it does not have the possibility to choose a path made of multiple destinations, it does not use crowdsourced data and it has no mention of public transports. In short, this app can be really helpful to people with ASD, but its accessibility is limited to only a few people, and it is a shame that it does not include public transportation, knowing that they are crucial for the mobility of people with ASD.  
+Moreover, the existing mobile apps to help people with ASD are not perfect and can be improved. For instance, as we can see in the article \cite{2023AccessibilityStrategiesPromote}, we can see that an app has been developped for the city of Viana do Castelo, in Portugal, in order to provide to people an optimal route regarding their disabilities. This app uses the A-star algorithm to find five optimum paths between two destinations, and users can choose the best path for them depending on their disabilities. However, this app is available only in the city of Viana de Castelo, so people living in other cities cannot benefit of it. Also, it does not have the possibility to choose a path made of multiple destinations, it does not use crowdsourced data and it has no mention of public transports. In short, this app can be really helpful to people with ASD, but its accessibility is limited to only a few people, and it is a shame that it does not include public transportation, knowing that they are crucial for the mobility of people with ASD.  
 \subsection{Some of the solutions could not be compatible with the already existing infrastructures}
-As indicated in the article (5), some of the solutions to help people with ASD to walk arround the cities consist of reorganising them in order to have a better quality of life. This article gives the example of one district of the city of Sassari, in Italy, which name is Sardinia. In this district, people with ASD cannot freely walk due to noise and regular dangerous situations. 
+As indicated in the article \cite{2018MobilityPoliciesExtraSmall}, some of the solutions to help people with ASD to walk arround the cities consist of reorganising them in order to have a better quality of life. This article gives the example of one district of the city of Sassari, in Italy, which name is Sardinia. In this district, people with ASD cannot freely walk due to noise and regular dangerous situations. 
 
 A solution has been developed to help people with ASD to walk arround the district. The first step is to decrease the car’s traffic, to decrease noise and dangerous situations.  For that we can define low-speed blocks to discourage through traffic, add parkings areas at the entrance of the quarter, and to reduce the size of roads in favor of sidewalks. Another step is to mark the dangerous zone, to facilitate their identification. To do that we can mark by a vertical line (on the floor) the regular path taken. In the safe areas, the line is blue, in the dangerous zone the line is red, this mark when you need to be careful. The last solution presented in this paper is to create quiet space, around the main road. For this one, we can add some benches, trees and children's games in some space (like a tiny park). This also permite to the rest of the population, who don’t have TSA, to also take advantage of this evolution.
 
 Unfortunately, not all the cities in the world will agree to do all these reorganisations. For example, in a city where most of the people drive by car and the road is already built, it may be not possible to reduce the size of roads in favor of sidewalks, because it would cost too much money and most of people would be against it. Moreover, in some cities, it can also be complicated to build more quiet zones with trees, as they already have too much buildings and roads and there is no more space to build new parks. Building a quiet zone would imply destroying another infrastructure, whose owner would be against. 
 \subsection{Most of the solutions force people with ASD to adapt}
-As it is highlighted in the article (4), a lot of technologies designed to help people with ASD are criticized because they force autistic people to adapt to the social norms we know instead of really helping them. For example, as mentioned in the paragraph 4.3, this article presents eye-tracking glasses that are used to train autistic people to look people in the eyes. It also presents, a technology that tells its user if she/he is at a comfortable distance with her/his interaction partner. This article also talks about numerous other gadgets which have one thing in common : they see autism as a disability and help autistic people adapt to the social norms. However, some autistic people prefer not to see it as a disability, but as a different way of behaving. Therefore, it would be better to have technologies to help them find their own ways of communicating with their partners. 
+As it is highlighted in the article \cite{2017UTravelSmartMobility}, a lot of technologies designed to help people with ASD are criticized because they force autistic people to adapt to the social norms we know instead of really helping them. For example, as mentioned in the paragraph 4.3, this article presents eye-tracking glasses that are used to train autistic people to look people in the eyes. It also presents, a technology that tells its user if she/he is at a comfortable distance with her/his interaction partner. This article also talks about numerous other gadgets which have one thing in common : they see autism as a disability and help autistic people adapt to the social norms. However, some autistic people prefer not to see it as a disability, but as a different way of behaving. Therefore, it would be better to have technologies to help them find their own ways of communicating with their partners. 
 \subsection{The importace of the diagnosis}
