--- a/content/__all__.tex
+++ b/content/__all__.tex
@@ -13,5 +13,8 @@
 \input{content/3.part.tex}
 \newpage
 
+\input{content/4.part.tex}
+\newpage
+
 \input{content/conclusion.tex}
 \input{content/0.bibliography.tex} 
