--- a/content/1.part.tex
+++ b/content/1.part.tex
@@ -4,13 +4,9 @@
 
 In this part, I provide you with some useful \LaTeX{} examples that you can reuse easily.
 
-\subsection{Citations and references}
-
-Here I am talking about a great article \cite{ghosh_artificial_2021}. And there is also a great conference proceedings \cite{falkmer_viewpoints_2015}.
-
 \subsection{Figures}
 
-Here is an example of a figure environment : \cite{amoretti_utravel_2017}\cite{benssassi_wearable_2018}\cite{cecchini_mobility_2018}\cite{deka_co-principal_nodate}\cite{gong_building_2017}\cite{gong_building_2017-1}\cite{haas_experiences_nodate}\cite{kersten_developing_2021}\cite{mekbib_designing_2021}\cite{paiva_enabling_2021}\cite{silva_accessibility_2023}
+Here is an example of a figure environment :
 
 \begin{center}
     \begin{figure}[ht!]
