--- a/content/0.introduction.tex
+++ b/content/0.introduction.tex
@@ -1,18 +1,13 @@
 \sectionnn{Introduction}
 
-Praesent dictum dapibus nisl, eu maximus mi blandit maximus. Morbi id accumsan nibh. Morbi et molestie purus. Sed pretium egestas lectus vitae pretium. Duis feugiat tempor augue, in rutrum nisl venenatis non. Ut sagittis arcu eget elit sodales luctus. Aliquam nec sagittis dolor. Cras pretium, lorem tincidunt congue dapibus, est lacus ornare nunc, eu iaculis neque odio in lacus. Vivamus dictum id mi sit amet pretium. Ut hendrerit in lacus quis dignissim. Donec eget consequat magna, pellentesque mollis libero. Mauris in sem molestie, mollis metus nec, fermentum tortor. Duis ut tempor nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+Nowadays, with the increasing growth of populations, mobility has become a constant axis of development. Cities put more and more effort in expanding their public transportation networks in order to serve the consistent flow of users and avoid traffic jams. Additionally, mobility must adapt to the challenges of the XXIst century like ecology, hence the development of alternate ways to get about.
 \smallskip
 
-Aliquam elit est, sagittis ac enim vitae, finibus tristique lectus. Proin maximus velit tortor, ut fermentum purus aliquet sit amet. Quisque vitae fermentum enim, vitae feugiat nibh. Ut semper odio vitae mauris tincidunt fermentum. Suspendisse ornare congue lectus, ac commodo lectus euismod in. Duis eu scelerisque tortor. Vestibulum venenatis arcu id lectus bibendum ullamcorper. Integer vel bibendum tellus. Nullam quis accumsan lorem. Sed sed tempus dui. Nulla justo felis, iaculis a turpis eu, hendrerit gravida est. Etiam felis enim, accumsan cursus tellus et, faucibus dapibus lacus. Fusce ac mollis elit. Vestibulum pulvinar consectetur ipsum non congue. Vestibulum id ligula est. Sed vehicula ligula molestie molestie facilisis.
+However, mobility still fails to address the issue of inclusivity. An increasing population means an increasing number of people with disabilities or disorders and some infrastructures are still not adapted to the special needs they may have. Modern constructions have started to evolve, specifically to be more accessible for deaf people, blind people, or wheelchair users.
 \smallskip
 
-Ut pulvinar sodales tempus. Sed efficitur felis eu imperdiet sollicitudin. Quisque quis cursus purus, id accumsan quam. Vivamus vitae nibh facilisis, accumsan purus ut, blandit nibh. Donec mollis quam ac libero laoreet luctus. Proin blandit fringilla massa sit amet sollicitudin. Nunc ac tempor arcu. Etiam sit amet metus urna. Quisque eleifend vulputate purus, blandit iaculis nisi hendrerit quis. Cras tempus, velit sed tempor congue, neque neque lobortis tortor, in gravida ante justo at erat. Maecenas mollis, quam id placerat auctor, ipsum metus mattis tellus, non sollicitudin turpis mauris eget nibh.
+But one of the disorders that stays under the radar when it comes to public transportation policies is Autism Spectrum Disorder (ASD). Given that it is an invisible disability, it usually goes unnoticed, even though it may cause numerous issues when using vehicles or public transportation. These issues should be investigated in order to provide solutions for the mobility of autistic people.
 \smallskip
 
-Aliquam id rutrum nisi, id aliquet nulla. Pellentesque luctus magna eget nunc malesuada suscipit. Suspendisse dignissim nibh at purus ultricies, quis tempus sem mollis. Phasellus nec mauris vitae arcu suscipit fermentum vitae quis justo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer sed enim viverra, efficitur dui a, pretium magna. Nullam vulputate condimentum neque, non pretium erat gravida et. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque eu ultricies sapien. In id urna nulla. Nunc consequat tortor eget leo imperdiet elementum. Praesent in erat ipsum. Nullam convallis, arcu at tincidunt cursus, lorem ex finibus magna, ac feugiat augue magna sed neque. Aliquam suscipit pellentesque lectus. Sed ac tellus nec lorem sollicitudin varius. 
+This document aims to understand the challenges regarding the mobility of the autistic community. First, we define what ASD is and what problems this community faces. Next, we focus on the specific issues regarding their mobility. Then, we take a detailed look at the existing solutions for autistic people. Finally, we analyze their limits and explore how future efforts should address these shortcomings.
 \smallskip
-
-
-
-
-
