--- a/content/4.part.tex
+++ b/content/4.part.tex
@@ -1,7 +1,11 @@
 \section{The limits of the solutions}
-As we mentioned previously, numerous solutions exist in order to simplify urban transportation for people with ASD. However, nowadays, we do not have a perfect solution. Even though the existing solutions can help people with ASD, they all have numerous flaws. First of all, the resources are limited and not adapted to every person with ASD. Then, some of the considered solutions cannot be done because it would not be compatible with the already existing infrastructures. Moreover, more of the solutions are not ideal because it just forces people with ASD to adapt to the other people, instead of considering their real needs. Finally, instead of finding solutions in order to help them to adapt to the other people, we should work on diagnosing autism better and earlier.
+
+As we mentioned previously, numerous solutions exist in order to simplify urban transportation for people with ASD. However, nowadays, we do not yet have a perfect solution. Even though the existing solutions can help people with ASD, they all have multiple flaws. First of all, the resources are limited and not adapted to every person. Moreover, existing infrastructures are sometimes incompatible with newly found solutions, making it difficult to implement aforementioned solutions.
+
+Furthermore, most solutions are not ideal because they force autistics to adapt to neurotypical norms, instead of considering their real needs. We should instead turn our focus towards diagnosing autism better and earlier.
+
 \subsection{The existing solutions are limited}
-As we saw before, there exist some solutions in order to help people with ASD. However, these solutions are very far from being enough. In fact, as we can see in the articles \cite{2015ViewpointsAdultsAutism} and \cite{2021DevelopingCommunityMobility}, a lot of autistic people can have trouble driving and most of them prefer to use the public transportation. But the public transportation has also a lot to improve. Indeed, a study has been made in Sydney \cite{2020ExperiencesYoungAutistic} over 14 young adults who have ASD, and shows that most of them feel anxious due to the stress of doing bad things, like miss their stop. Also, the noise, smell, light and motion sickness can be a trouble for them. But most of them still have confidence in their ability to use public transportation.
+Despite great efforts to find suitable solutions, most of the existence ones are very far from being sufficient. A lot of autistic people can have trouble driving and most of them prefer to use public transportation \cite{2015ViewpointsAdultsAutism} \cite{2021DevelopingCommunityMobility}, but the public transportation is still lagging behind with regards to certain issues. Indeed, a study has been made in Sydney \cite{2020ExperiencesYoungAutistic} over 14 young adults who have ASD, and shows that most of them feel anxious due to the stress of doing bad things, like miss their stop. Also, the noise, smell, light and motion sickness can be a trouble for them. But most of them still have confidence in their ability to use public transportation.
 
 Another problem that is highlighted in the article \cite{2015DetourRightPlace} is the lack of accessibility of public transportation. As mentioned in this article, public transportation is crucial for the mobility of people with ASD but it exists numerous inequalities regarding its accessibility. For instance, suburbans and rural areas does not have as many public transportation as the center of a big city.
 
@@ -14,4 +18,8 @@ A solution has been developed to help people with ASD to walk arround the distri
 Unfortunately, not all the cities in the world will agree to do all these reorganisations. For example, in a city where most of the people drive by car and the road is already built, it may be not possible to reduce the size of roads in favor of sidewalks, because it would cost too much money and most of people would be against it. Moreover, in some cities, it can also be complicated to build more quiet zones with trees, as they already have too much buildings and roads and there is no more space to build new parks. Building a quiet zone would imply destroying another infrastructure, whose owner would be against. 
 \subsection{Most of the solutions force people with ASD to adapt}
 As it is highlighted in the article \cite{2017UTravelSmartMobility}, a lot of technologies designed to help people with ASD are criticized because they force autistic people to adapt to the social norms we know instead of really helping them. For example, as mentioned in the paragraph 4.3, this article presents eye-tracking glasses that are used to train autistic people to look people in the eyes. It also presents, a technology that tells its user if she/he is at a comfortable distance with her/his interaction partner. This article also talks about numerous other gadgets which have one thing in common : they see autism as a disability and help autistic people adapt to the social norms. However, some autistic people prefer not to see it as a disability, but as a different way of behaving. Therefore, it would be better to have technologies to help them find their own ways of communicating with their partners. 
-\subsection{The importace of the diagnosis}
+
+\subsection{The importance of the diagnosis}
+Another type of solution would be to improve the detection of ASD on the children. Like it has been described in the introduction, it is very important to detect this trouble the earlier that is possible. In this way we can cite the solution suggested in the paper !!!!!!!!!!! (Designing a Smart Virtual Environment for Autism Spectrum Disorder Detection), which uses new technologie like VR. The idea is to make some games that will test the children, this includes tutorial levels, in-game day levels, mental stressor mini-games, and physical exercise mini-games. 
+
+This type of solution unlike the other will not directly improve the usage of transport for the person with ASD. But this can still be a great way of improvement that can be developed….. 
