--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{fancyhdr}
 \usepackage{indentfirst}
 \usepackage{hyperref}
+\usepackage[indent]{parskip}
 
 
 %==[DO NOT CHANGE ANYTHING HERE]====================
