--- a/imports/bibliography.bib
+++ b/imports/bibliography.bib
@@ -4,7 +4,7 @@
   year = {2015},
   month = sep,
   address = {{New Jersey}},
-  institution = {{Rut}},
+  institution = {{Rutgers}},
   url = {https://vtc.rutgers.edu/publication/detour-to-the-right-place/},
   langid = {english},
   file = {/home/docjyj/Zotero/storage/K7NMLWHA/Deka et al. - Co-Principal Investigator.pdf}
@@ -118,7 +118,6 @@
   author = {Haas, Kaaren and Wilson, Nathan J and Cordier, Reinie and Vaz, Sharmila and Lee, Hoe Chung-yeung},
   year = {2020},
   month = jan,
-  number = {ISBN: 978-1-922365-05-7},
   address = {{Brisbane}},
   institution = {{Cooperative Research Centre for Living with Autism}},
   url = {https://www.autismcrc.com.au/knowledge-centre/reports/experiences-young-autistic-adults-using-metropolitan-public-transport},
